public/stylesheets/styles.css
body {
	background-color: cornsilk;
	font-family: Garamond;
}

nav {
  margin-left: 403px;
  width: 560px;
}
nav ul {
 list-style-type: none;
}

nav ul li {
	display: inline-block;
}

h1 {
	margin-left: 75px;
	width: 1000px;
}

span {
	border: 1.8px dashed;
	padding: 1em;
}

td span {
	display: block;
  border: none;
	padding: 0;
}

td div {
	border: 1.8px dashed;
	margin-left: 1em;
	margin-right: 1em;
}

span #right-cow {
	padding-left: 1.2em;
}


table, th, tr  {
  border: 1px dashed;
  padding: 10px;
  border-collapse: separate; 
  border-spacing: 10px;
  position: relative;
/*  margin: 0 auto;*/
}

td {
	margin: 10px;
	border: 1.8px dashed;
	font-size: 0;
}



/* login */

#signup {
	text-align: center;
}

#login {
	text-align: center;
}



/* hangman */

#scene {
	float: left;
	width: 55em;
}

.hangman {
	float: right;
	margin-top: 7em;
}

#new-game {
	-webkit-appearance: none;
	background-color: cornsilk;
	border: 1.8px dashed;
	font-size: 20px;
	font-family: Garamond;
	margin-left: 957px;
	width: 100px;
	height: 50px;
}

#guess-display {
	margin-top: .7em;
	width: 20em;
	position: absolute;
	left: 980px;
}

.game-state {
  padding-top: 3em;
  padding-bottom: 3em;
  font-size: 1.5em;
}

#incorrect-guesses {
	font-size: 1.5em;
}

#guess-button {
	-webkit-appearance: none;
	background-color: cornsilk;
	border: 1.8px dashed;
	font-family: Garamond;
	float: left;
	font-size: 20px;
	text-align: center;
	width: 100px;
	height: 50px;
}

.text-box {
	border: 1.8px dashed;
	margin-left: 20px;
	background-color: cornsilk;
	text-align: center;
	width: 100px;
	font-size: 40px;
}

#game-over {
	padding-top: 1em;
}

#word {
	padding-top: 30px;
	font-size: 40px;
}



/* tic-tac-toe */

#announcer-cow-cow {
	margin: 65px 0 0 100px;
	float: left;
}

#message {
	font-size: 1.5em;
  float: left;
  padding-left: 1em;
  margin-top: 20px;
  border: 1.8px dashed;
}

#clear-board {
  -webkit-appearance: none;
	background-color: cornsilk;
	border: 1.8px dashed;
	font-size: 20px;
	font-family: Garamond;
	margin-left: 605px;
	width: 100px;
	height: 50px;
}

.tic-tac-toe-board {
	position: absolute;
	margin-top: 50px;
	margin-left: 300px;
}

.thought-bubbles ul {
	list-style-type: none;
	position: absolute;
	margin: 50px 0 0 189px;
}

.square {
  width: 146px;
  height: 146px;
  text-align: center;
}



/* profile */

.hangmen-won {
	margin-left: 100px;
}



/* home page */



/* site-wide */

.clouds {
	margin: 0;
	position: absolute;
	margin-bottom: 50px;
}

#cow-cow {
	float: right;
}

.button {
	-webkit-appearance: none;
	background-color: cornsilk;
	border: 1.8px dashed;
	font-size: 16px;
	font-family: Garamond;
	float: right;
	margin-right: 1.2em;
	width: 80px;
	height: 35px;
}

.cows {
	margin-top: 10em;
	float: left;
	padding-left: 4em;
	width: 38em;
}

